--- a/src/Native/libmultihash/libmultihash.vcxproj
+++ b/src/Native/libmultihash/libmultihash.vcxproj
@@ -251,6 +251,8 @@
     <ClInclude Include="sha3\sph_keccak.h" />
     <ClInclude Include="sha3\sph_luffa.h" />
     <ClInclude Include="sha3\sph_panama.h" />
+    <ClInclude Include="sha3\sph_radiogatun.h" />
+    <ClInclude Include="sha3\sph_ripemd.h" />
     <ClInclude Include="sha3\sph_sha2.h" />
     <ClInclude Include="sha3\sph_shabal.h" />
     <ClInclude Include="sha3\sph_shavite.h" />
@@ -356,6 +358,8 @@
     <ClCompile Include="sha3\sph_jh.c" />
     <ClCompile Include="sha3\sph_keccak.c" />
     <ClCompile Include="sha3\sph_luffa.c" />
+    <ClCompile Include="sha3\sph_radiogatun.c" />
+    <ClCompile Include="sha3\sph_ripemd.c" />
     <ClCompile Include="sha3\sph_sha2.c" />
     <ClCompile Include="sha3\sph_sha2big.c" />
     <ClCompile Include="sha3\sph_shabal.c" />
