--- a/src/Native/libmultihash/libmultihash.vcxproj.filters
+++ b/src/Native/libmultihash/libmultihash.vcxproj.filters
@@ -134,6 +134,12 @@
     <ClInclude Include="sha3\sph_luffa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sha3\sph_radiogatun.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sha3\sph_ripemd.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="sha3\sph_shabal.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -467,6 +473,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="sha3\sph_luffa.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sha3\sph_radiogatun.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sha3\sph_ripemd.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="sha3\sph_shabal.c">
