--- a/src/Native/libmultihash/Makefile
+++ b/src/Native/libmultihash/Makefile
@@ -12,15 +12,12 @@ OBJECTS = bcrypt.o blake.o blake2s.o c11.o dcrypt.o fresh.o lane.o \
     sha3/sph_luffa.o sha3/sph_shabal.o sha3/sph_shavite.o sha3/sph_simd.o sha3/sph_skein.o sha3/sph_whirlpool.o \
     sha3/sph_haval.o sha3/sph_sha2.o sha3/sph_sha2big.o sha3/sph_blake2s.o sha3/sm3.o sha3/panama.o sha3/sph_ripemd.o \
     sha3/extra.o sha3/gost_streebog.o sha3/sph_tiger.o sha3/SWIFFTX.o sha3/sph_radiogatun.o KeccakP-800-reference.o \
-    shavite3.o skein.o x11.o x13.o x15.o x17.o x16r.o x16rv2.o x16s.o x21s.o odocrypt.o x25x.o \
+    shavite3.o skein.o x11.o x13.o x15.o x17.o x16r.o x16rv2.o x16s.o x21s.o odocrypt.o x25x.o phi.o phi2.o phi5.o \
     Lyra2.o Lyra2-z.o lyra2re.o lyra2v2.o lyra2v3.o lyra2z.o lyra2z330.o lyra2vc0ban.o Sponge.o geek.o balloon.o \
-	yescrypt.o yescrypt-opt.o sha256.o sha256csm.o sha256_Y.o \
-	yespower/yespower-platform.o yespower/yespower-combined.o \
-    equi/util.o equi/support/cleanse.o equi/random.o \
-    equi/uint256.o equi/arith_uint256.o equi/crypto/hmac_sha512.o \
-    equi/crypto/sha1.o equi/crypto/sha512.o equi/crypto/sha256.o \
-    equi/crypto/hmac_sha256.o equi/crypto/equihash.o equi/crypto/ripemd160.o \
-    equi/equihashverify.o \
+	yescrypt.o yescrypt-opt.o sha256.o sha256csm.o sha256_Y.o yespower/yespower-platform.o yespower/yespower-combined.o \
+    equi/util.o equi/support/cleanse.o equi/random.o equi/uint256.o equi/arith_uint256.o equi/crypto/hmac_sha512.o \
+    equi/crypto/sha1.o equi/crypto/sha512.o equi/crypto/sha256.o equi/crypto/hmac_sha256.o equi/crypto/equihash.o \
+	equi/crypto/ripemd160.o equi/equihashverify.o \
     libethash/internal.o libethash/io.o libethash/io_posix.o libethash/sha3.o \
     verushash/haraka.o verushash/haraka_portable.o verushash/utilstrencodings.o \
     verushash/verus_hash.o verushash/verus_clhash.o verushash/verus_clhash_portable.o
