--- a/src/Native/libmultihash/libmultihash.vcxproj
+++ b/src/Native/libmultihash/libmultihash.vcxproj
@@ -196,6 +196,7 @@
     <ClInclude Include="fresh.h" />
     <ClInclude Include="fugue.h" />
     <ClInclude Include="geek.h" />
+    <ClInclude Include="gost.h" />
     <ClInclude Include="groestl.h" />
     <ClInclude Include="hashodo.h" />
     <ClInclude Include="hefty1.h" />
@@ -226,6 +227,9 @@
     <ClInclude Include="nist5.h" />
     <ClInclude Include="odocrypt.h" />
     <ClInclude Include="portable_endian.h" />
+    <ClInclude Include="phi.h" />
+    <ClInclude Include="phi2.h" />
+    <ClInclude Include="phi5.h" />
     <ClInclude Include="quark.h" />
     <ClInclude Include="qubit.h" />
     <ClInclude Include="s3.h" />
@@ -309,6 +313,7 @@
     <ClCompile Include="fresh.c" />
     <ClCompile Include="fugue.c" />
     <ClCompile Include="geek.c" />
+    <ClCompile Include="gost.c" />
     <ClCompile Include="groestl.c" />
     <ClCompile Include="hefty1.c" />
     <ClCompile Include="jh.c" />
@@ -333,6 +338,9 @@
     <ClCompile Include="exports.cpp" />
     <ClCompile Include="nist5.c" />
     <ClCompile Include="odocrypt.cpp" />
+    <ClCompile Include="phi.c" />
+    <ClCompile Include="phi2.c" />
+    <ClCompile Include="phi5.c" />
     <ClCompile Include="quark.c" />
     <ClCompile Include="qubit.c" />
     <ClCompile Include="s3.c" />
