--- a/src/Native/libmultihash/Makefile
+++ b/src/Native/libmultihash/Makefile
@@ -9,8 +9,8 @@ OBJECTS = balloon.o bcrypt.o blake.o blake2s.o c11.o dcrypt.o exports.o fresh.o 
           KeccakP-800-reference.o keccak.o lane.o Lyra2.o Lyra2-z.o lyra2re.o lyra2v2.o lyra2v3.o lyra2z.o lyra2z330.o lyra2vc0ban.o \
 	      neoscrypt.o nist5.o odocrypt.o phi.o phi2.o phi5.o quark.o qubit.o s3.o scryptn.o sha256.o sha256csm.o sha256_Y.o shavite3.o skein.o Sponge.o \
 	      x11.o x13.o x15.o x17.o x16r.o x16rv2.o x16s.o x21s.o x25x.o yescrypt.o yescrypt-opt.o \
-          sha3/SWIFFTX.o sha3/aes_helper.o sha3/extra.o sha3/hamsi_helper.o sha3/md_helper.o sha3/sph_blake.o \
-          sha3/sph_blake2s.o sha3/sph_bmw.o sha3/sph_cubehash.o sha3/sph_echo.o sha3/sph_fugue.o sha3/sph_gost.o sha3/sph_groestl.o \
+          sha3/SWIFFTX.o sha3/aes_helper.o sha3/extra.o sha3/hamsi_helper.o \
+          sha3/sph_blake.o sha3/sph_blake2s.o sha3/sph_bmw.o sha3/sph_cubehash.o sha3/sph_echo.o sha3/sph_fugue.o sha3/sph_gost.o sha3/sph_groestl.o \
           sha3/sph_hamsi.o sha3/sph_haval.o sha3/sph_hefty1.o sha3/sph_jh.o sha3/sph_keccak.o sha3/sph_luffa.o sha3/sph_panama.o \
           sha3/sph_radiogatun.o sha3/sph_ripemd.o sha3/sph_sha2.o sha3/sph_sha2big.o sha3/sph_shabal.o sha3/sph_shavite.o \
           sha3/sph_simd.o sha3/sph_skein.o sha3/sph_sm3.o sha3/sph_tiger.o sha3/sph_whirlpool.o \
